--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Natural Gas Futures Data</title>
+    <title>Weekly Natural Gas Futures Data</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,7 +20,7 @@
             text-align: left;
         }
         th {
-            background-color: #f4f4f4;
+            background-color: #add8e6; /* Light blue color */
         }
         tr:nth-child(even) {
             background-color: #f9f9f9;
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>Daily Natural Gas Futures Data</h1>
+    <h1>Weekly Natural Gas Futures Data</h1>
     <p>Data retrieved from the EIA API using the GET method with an API key.</p>
     <table id="data-table">
         <thead>
@@ -43,7 +43,7 @@
     </table>
 
     <script>
-        const API_URL = 'https://api.eia.gov/v2/natural-gas/pri/fut/data/?api_key=BRUFz1Ow7Qmcd2npz5UNQhrF4ILujETSWc5L3mBC&frequency=daily&data[0]=value&sort[0][column]=period&sort[0][direction]=desc&offset=0&length=5000';
+        const API_URL = 'https://api.eia.gov/v2/natural-gas/pri/fut/data/?api_key=BRUFz1Ow7Qmcd2npz5UNQhrF4ILujETSWc5L3mBC&frequency=weekly&data[0]=value&sort[0][column]=period&sort[0][direction]=desc&offset=0&length=5000';
         
         async function fetchData() {
             try {
