--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <h1>Weekly Natural Gas Futures Data</h1>
-    <p>Data retrieved from the EIA API using the GET method with an API key.</p>
+    <p>Weekly Natural Gas Data from Henry Hub!</p>
     <table id="data-table">
         <thead>
             <tr>
